Login and db done

--- a/app/src/main/res/layout/fragment_admin_login.xml
+++ b/app/src/main/res/layout/fragment_admin_login.xml
@@ -25,7 +25,7 @@
             android:textSize="30dp"
             android:layout_marginLeft="120dp"/>
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/id"
+            android:id="@+id/emailadmin_login"
             android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/pass"
+            android:id="@+id/passadmin_login"
             android:layout_margin="20dp"
             android:layout_width="match_parent"
             app:endIconMode="password_toggle"
@@ -53,7 +53,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/institute"
+            android:id="@+id/instituteadmin_login"
             android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
