--- a/app/src/main/res/layout/fragment_create_admin.xml
+++ b/app/src/main/res/layout/fragment_create_admin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateAdmin">
+    tools:context=".Fragment.CreateAdmin">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
