--- a/app/src/main/res/layout/fragment_faculty__add.xml
+++ b/app/src/main/res/layout/fragment_faculty__add.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".Faculty_Ad">
+    tools:context=".Fragment.Faculty_Ad">
 
     <TextView
         android:layout_width="wrap_content"
