--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="primary">#FAF7FF</color>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_500">#6a7abc</color>
+    <color name="purple_700">#3a4e8c</color>
+    <color name="teal_200">#8da5ef</color>
+    <color name="teal_700">#5b76bc</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#575555</color>
 </resources>
