--- a/app/src/main/res/layout/fragment_student_admin.xml
+++ b/app/src/main/res/layout/fragment_student_admin.xml
@@ -1,44 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/student_admin"
+    android:id="@+id/faculty_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.Student">
 
-
-    <ScrollView
+    <ListView
+        android:id="@+id/student_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:id="@+id/student_rv"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:layout_editor_absoluteX="0dp" />
-    </ScrollView>
+        tools:listitem="@layout/admin_user_item"/> >
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/student_add1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/student_add1"
         android:src="@drawable/ic_baseline_add_24"
-        android:layout_marginTop="300dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-</FrameLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
