--- a/app/src/main/res/navigation/nav_authenticate.xml
+++ b/app/src/main/res/navigation/nav_authenticate.xml
@@ -51,8 +51,14 @@
         tools:layout="@layout/fragment_user_login" >
         <action
             android:id="@+id/action_userLogin_to_userFragment"
-            app:destination="@id/userFragment" />
+            app:destination="@id/userFragment" >
+            <argument
+                android:name="myArg"
+                app:argType="integer"
+                android:defaultValue="1" />
+        </action>
     </fragment>
+
     <activity
         android:id="@+id/admin2"
         android:name="com.example.permitme.Admin"
@@ -63,9 +69,15 @@
         android:name="com.example.permitme.Fragment.UserFragment"
         android:label="fragment_user"
         tools:layout="@layout/fragment_user" >
+        <argument
+            android:name="myArg"
+            app:argType="integer"
+            android:defaultValue="1" />
         <action
             android:id="@+id/action_userFragment_to_createPermission"
-            app:destination="@id/createPermission" />
+            app:destination="@id/createPermission">
+
+        </action>
     </fragment>
     <fragment
         android:id="@+id/createPermission"
