create permission with email done

--- a/app/src/main/res/navigation/nav_authenticate.xml
+++ b/app/src/main/res/navigation/nav_authenticate.xml
@@ -56,6 +56,10 @@
                 android:name="myArg"
                 app:argType="integer"
                 android:defaultValue="1" />
+            <argument
+                android:name="email"
+                app:argType="string"
+                android:defaultValue="H" />
         </action>
     </fragment>
 
@@ -73,15 +77,27 @@
             android:name="myArg"
             app:argType="integer"
             android:defaultValue="1" />
+        <argument
+            android:name="email"
+            app:argType="string"
+            android:defaultValue="" />
         <action
             android:id="@+id/action_userFragment_to_createPermission"
             app:destination="@id/createPermission">
-
+            <argument
+                android:name="senderemail"
+                app:argType="string"
+                android:defaultValue="" />
         </action>
     </fragment>
     <fragment
         android:id="@+id/createPermission"
         android:name="com.example.permitme.ui.permissions.CreatePermission"
         android:label="fragment_create_permission"
-        tools:layout="@layout/fragment_create_permission" />
+        tools:layout="@layout/fragment_create_permission" >
+        <argument
+            android:name="senderemail"
+            app:argType="string"
+            android:defaultValue="" />
+    </fragment>
 </navigation>
