Permission list created

--- a/app/src/main/res/layout/items_list.xml
+++ b/app/src/main/res/layout/items_list.xml
@@ -29,18 +29,18 @@
             android:text="Name of user"
             android:textColor="@color/black"
             android:textSize="18dp" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/user_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="group"
-            android:layout_toEndOf="@id/user_image_view"
-            android:layout_marginStart="30dp"
-            android:textSize="18dp"
-            android:textColor="@color/black"
             android:layout_below="@id/user_name"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="8dp"
-            />
+            android:layout_toEndOf="@id/user_image_view"
+            android:text="group"
+            android:textColor="@color/black"
+            android:textSize="18dp" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/permission_status"
