accepted-rejected-pending

--- a/app/src/main/res/layout/fragment_accepted.xml
+++ b/app/src/main/res/layout/fragment_accepted.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="5dp"
     tools:context=".ui.main.AcceptedFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/accepted_permissions_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Accepted fragment" />
+        android:padding="10dp"
+        tools:listitem="@layout/items_list"
+        />
 
-</FrameLayout>
+
+</RelativeLayout>
