--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,17 +12,20 @@
         android:id="@+id/permitmeimg"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:src="@drawable/img_1"
         android:scaleType="fitXY"
+        android:src="@drawable/img_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/permitmeimg">
@@ -64,5 +67,5 @@
             android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
-
+</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
