--- a/app/src/main/res/layout/fragment_faculty__add.xml
+++ b/app/src/main/res/layout/fragment_faculty__add.xml
@@ -68,6 +68,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="120dp"
-        android:text="Add Student"
+        android:text="Add Faculty"
         app:layout_constraintBottom_toBottomOf="parent" />
 </LinearLayout>
