Bug fixes and fixed doc and image upload issue

--- a/app/src/main/res/layout/fragment_pending.xml
+++ b/app/src/main/res/layout/fragment_pending.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
+        android:layout_marginTop="60dp"
         tools:listitem="@layout/items_list"
         />
 
