--- a/app/src/main/res/layout/items_list.xml
+++ b/app/src/main/res/layout/items_list.xml
@@ -17,8 +17,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/person"
-            app:civ_border_width="1dp"
-            />
+            app:civ_border_width="1dp" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/user_name"
