--- a/app/src/main/res/layout/fragment_student_admin.xml
+++ b/app/src/main/res/layout/fragment_student_admin.xml
@@ -19,7 +19,8 @@
             android:layout_width="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="30dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_add_24" />
 
